Fix swagger by add new entity
